[package]
name = "skylift-server"
version = "0.1.0"
edition = "2018"
authors = ["Kai <nankeen@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.19"
cranelift-wasm = { path = "../../cranelift/wasm", version = "0.77.0" }
cranelift-codegen = { path = "../../cranelift/codegen", version = "0.77.0" }
cfg-if = "1.0"
object = { version = "0.26.0", default-features = false, features = ['write'] }
target-lexicon = "0.12"
wasmtime-environ = { path = "../environ", version = "0.30.0" }
wasmtime-cranelift = { path = "../cranelift", version = "0.30.0", features = ["enable-serde"]}
wasmtime-jit = { path = "../jit", version = "0.30.0" }
wasmtime-cache = { path = "../cache", version = "0.30.0", optional = true }
wasmtime = { path = "../wasmtime", version = "0.30.0" }
wasmparser = "0.80.0"

prost = "0.9"
prost-types = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tonic = "0.6"

tokio = { version = "1.13.0", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-util = { version = "0.6.9", features = ["compat"] }

uuid = { version = "0.8", features = ["v4"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"

skylift = { path = "../skylift", version = "0.1.0" }
rayon = "1.0"

[build-dependencies]
tonic-build = "0.6"

[features]
cache = ["wasmtime-cache"]
