[package]
name = "skylift"
version = "0.1.0"
edition = "2018"
authors = ["Kai <nankeen@users.noreply.github.com>"]

[dependencies]
wasmtime-environ = { path = "../environ", version = "0.30.0" }
wasmtime-cranelift = { path = "../cranelift", version = "0.30.0" }
cranelift-wasm = { path = "../../cranelift/wasm", version = "0.77.0" }
cranelift-codegen = { path = "../../cranelift/codegen", version = "0.77.0" }
tokio = { version = "1.8.0", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-util = { version = "0.6.8", features = ["compat"] }
anyhow = "1.0.19"
capnp = "0.14.3"
capnp-rpc = "0.14.1"
futures = "0.3.17"
target-lexicon = "0.12"

[build-dependencies]
capnpc = "0.14.4"
