[package]
name = "skylift"
version = "0.1.0"
edition = "2018"
authors = ["Kai <nankeen@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.19"
cranelift-wasm = { path = "../../cranelift/wasm", version = "0.77.0" }
cranelift-codegen = { path = "../../cranelift/codegen", version = "0.77.0" }
target-lexicon = "0.12"
wasmtime-environ = { path = "../environ", version = "0.30.0" }
wasmtime-cranelift = { path = "../cranelift", version = "0.30.0" }

prost = "0.9"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.6"

futures = "0.3.17"
tokio = { version = "1.8.0", features = ["rt-multi-thread", "net", "macros", "sync"] }
tokio-util = { version = "0.6.8", features = ["compat"] }

capnp = "0.14.3"
capnp-rpc = "0.14.1"

[build-dependencies]
tonic-build = "0.6"
capnpc = "0.14.4"
